--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,15 @@
 streamlit
-streamlit-pills
 openai
 numpy
 pandas
 scikit_learn
-streamlit
 tensorflow
 tensorflow_hub
 keras
 cv2
-opencv-contrib-python-headless
-tensorflow-cpu==1.15
-streamlit==0.65.2
-numpy
 pandas
 pillow
-keras==2.3.0
+keras
 pathlib
 matplotlib
 python-resize-image
